test/files/neg/t6663.check
t6663.scala:16: error: type mismatch;
 found   : String
 required: Int
  var v = new C(42).foo[String].get :Int
                                ^
one error found
